# heterocephalus-example

./: .travis.yml  README.md  heterocephalus-example.cabal  stack.yaml
app/: Example.hs
